src/index.css
body {
  margin: 0;
  font-family: tahoma, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #0e141b

}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.couch {
  width: 300px;
  height: 100%
}

.title-div {
  display: flex;
  text-align: center;
  font-size: 45px;
  height: 50vh;
  flex-direction: column;
    justify-content: center;
}

.portfolio-div {
  display: flex;
  max-width: 1200px;
  width: 85vw;
  height: auto;
  background: #0e141b;
  margin: 25px auto;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.project-div {
  display: block;
  max-width: 550px;
  width: 45%;
  min-width:350px;
  min-height: 550px;
  height: auto;
  background-color: oldlace;
  border-radius: 15px;
  margin: 15px;
  padding: 0px 10px 0px 10px;
  border: 2px solid #ff5277;
}

.container {
  padding: 25px;
}

.info-div h3 {
  text-align: center;
  color: white;
}

.project-div p {
  text-align: center;
}

.photo-div {
  width: 90%;
  display: block;
  height: 250px;
  margin: 0 auto;
}

img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.links-div {
  position: relative;
  display: flex;
  justify-content: space-between;
  width: 150px;
  margin: 0 auto;
}

h4 {
  text-align: center;
}

.cv-img {
  height: 50px;
  width: 40px;
}

.icons-div {
  padding: 15px 0px 15px;
    margin: 0 auto;
    padding: auto;
    display: flex;
    justify-content: space-between;
    width: 300px;
}

.kiaora {
  color: white;
}

.red {
  color: #ff5277
}

.project-title {
  color: #ff5277;
  font-weight: bold;
  font-size: 20px;
  padding: 20px 0px;
  display: block;
}

li {
  list-style: none;
  color: white;
  padding-left: 25px;
  font-weight: bold;
}

li:hover {
  color: #ff5277;
  cursor: pointer;
}

.navbar {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: auto;
  padding: 15px 0px;
  position: sticky;
  top: 0px;
  background-color: #0e141b6c;
  /* border-bottom: 1px solid white; */
}

.nav-list {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.nav-list ul {
  display: flex;
  justify-content: space-between;
  height: 100%;
  align-items: center;
  padding: 0;
}

.name-div p {
  color: white;
  font-weight: bold;
}

svg:hover {
  cursor: pointer;
}

.white {
  color: white;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  width: 85vw;
  max-width: 1200px;
  margin: auto;
}

@media only screen and (max-width: 768px) {
  .navbar {
    visibility:hidden
  }
}

